--- a/app/views/items/index.slim
+++ b/app/views/items/index.slim
@@ -1,5 +1,8 @@
-
-
+= search_form_for(@q) do |f| 
+	= f.label :title_cont 
+	= f.search_field :title_cont
+	= f.submit
+ 
 - @items.each do |item|
   h1
   	=  link_to item.title, item_path(item)
