--- a/app/views/items/index.slim
+++ b/app/views/items/index.slim
@@ -1,6 +1,6 @@
 = search_form_for(@q) do |f| 
-	= f.label :title_cont 
-	= f.search_field :title_cont
+	= f.label :title_or_description_cont 
+	= f.search_field :title_or_description_cont
 	= f.submit
  
 - @items.each do |item|
