--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -7,8 +7,14 @@ html
 		= javascript_include_tag 'application', 'data-turbolinks-track' => true
 		= csrf_meta_tags
 
-
   body
+		p .notice = notice
+		p .alert = alert
+		p
+  		|  Hello 
+  		= current_user.email
+  		== yield
 
-  	== yield
+  		- if user_signed_in?
+  			= link_to "Logout", destroy_user_session_path, method: :delete
 
