--- a/app/views/items/index.slim
+++ b/app/views/items/index.slim
@@ -19,3 +19,5 @@ table.table
         = item.title
       td
         = item.completion_status
+      td
+        = link_to "<i class=\"glyphicon glyphicon-trash\"></i>".html_safe, item_path(item), method: :delete, class: "btn btn-danger"
