--- a/app/views/items/index.slim
+++ b/app/views/items/index.slim
@@ -20,4 +20,4 @@ table.table
       td
         = item.completion_status
       td
-        = link_to "<i class=\"glyphicon glyphicon-trash\"></i>".html_safe, item_path(item), method: :delete, class: "btn btn-danger"
+        = link_to "<i class=\"glyphicon glyphicon-remove\"></i>".html_safe, item_path(item), method: :delete, class: "btn btn-danger"
