attempting rebase with cancancan and master

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -11,11 +11,10 @@ html
 		p .notice = notice
 		p .alert = alert
 		- if user_signed_in?
-        p
+      p
   		|  Hello
   		= current_user.email
   		== yield
 
   		- if user_signed_in?
-  			= link_to "Logout", destroy_user_session_path, method: :delete
-
+  			= button_to('Logout', destroy_user_session_path, :method => :delete)
