tasks on index page draggable using coffeescript and html draggable element

--- a/app/views/items/index.slim
+++ b/app/views/items/index.slim
@@ -14,7 +14,7 @@ span &nbsp; &nbsp;
 
 table.table
   - @items.each do |item|
-    tr
+    tr draggable="true" 
       td
         = item.title
       td
