converting files to slim and updating bootstrap css on forms fields

--- a/app/views/items/_form.slim
+++ b/app/views/items/_form.slim
@@ -1,5 +1,6 @@
 = semantic_form_for @item do |f|
   h2
+  	.well.col-md-8.col-md-offset-2
   	= f.inputs do
       = f.input :title
       = f.input :description
