--- a/app/views/items/_form.slim
+++ b/app/views/items/_form.slim
@@ -1,9 +1,12 @@
 = semantic_form_for @item do |f|
-  h2
-  	= f.inputs do
-      = f.input :title
-      = f.input :description
-  = f.actions do
-    = f.action :submit, :as => :button
-    = f.action :cancel, :as => :link
+	h2
+	= f.inputs do
+	  = f.input :title
+  	= f.input :description
+	
+	= f.actions do
+			
+		= f.action :submit, :as => :button
+		= f.action :cancel, :as => :link
+		= f.action :submit, :as => :button, label: 'Done', button_html: {value: :complete}
 
