added more code for cancan...user cannot access their items for whatever reason

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -19,4 +19,4 @@ html
         = current_user.email
     = yield
     - if user_signed_in?
-      = link_to "Logout", destroy_user_session_path
+      = link_to("Logout", destroy_user_session_path, method: :get)
