dashboard customized, user_id is now being saved when item is created

--- a/app/views/items/index.slim
+++ b/app/views/items/index.slim
@@ -16,7 +16,7 @@ table.table
   - @items.each do |item|
     tr draggable="true"
       td
-        = link_to item.title, item_path(item)
+        = link_to item.title, item
       td
         = item.completion_status
       td
