--- a/app/views/items/_form.slim
+++ b/app/views/items/_form.slim
@@ -6,4 +6,5 @@
   = f.actions do
     = f.action :submit, :as => :button
     = f.action :cancel, :as => :link
-
+	= f.action :submit, :as => :button, label: 'Done', button_html: {value: :complete}
+	
