--- a/app/views/items/_state.slim
+++ b/app/views/items/_state.slim
@@ -1,8 +1,9 @@
 = semantic_form_for @item do |f|
 
 	- if @item.pending?
-		= f.action :submit, :as => :button, label: 'Done', button_html: {value: :complete}
-	- elsif @item.completed?
-	 	= f.action :submit, :as => :button, label: 'To Do', button_html: {value: :incomplete}
-	- else 
-		= f.action :submit, :as => :button, label: 'Will Not Do', button_html: {value: :reject}
+    = f.action :submit, :as => :button, label: 'Done', button_html: {value: :complete}
+    =f.action :submit, :as => :button, label: 'wont do', button_html: {value: :reject}
+  - elsif @item.completed?
+    = f.action :submit, :as => :button, label: 'To Do', button_html: {value: :incomplete}
+  - elsif @item.wont_do?
+    = f.action :submit, :as => :button, label: 'To Do', button_html: {value: :incomplete}
