--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,4 +17,4 @@ html
         = current_user.email
     = yield
     - if user_signed_in?
-      = link_to "Logout", destroy_user_session_path, method: :delete
+      = button_to "Logout", destroy_user_session_path, method: :delete
